- fixed scrollbars appearing with tag chart

--- a/media/css/charts.css
+++ b/media/css/charts.css
@@ -17,9 +17,9 @@ dl.tags_chart dt ul.tags {
 	float: right;
 }
 dl.tags_chart dd {
-	width: 89px;
+	width: 84px;
 	float: left;
-	margin: 0;
+	margin: 0 5px 0 0;
 	display: inline;
 }
 dl.tags_chart dd span {
